test/expressions/casts/CastCArrayToCPtr-multiple.compopts
-s case=13  # CastCArrayToCPtr-multiple.13
-s case=14  # CastCArrayToCPtr-multiple.14
-s case=21  # CastCArrayToCPtr-multiple.21
-s case=23  # CastCArrayToCPtr-multiple.23
-s case=24  # CastCArrayToCPtr-multiple.24
-s case=32  # CastCArrayToCPtr-multiple.32
-s case=42  # CastCArrayToCPtr-multiple.42
-s case=51  # CastCArrayToCPtr-multiple.51
-s case=52  # CastCArrayToCPtr-multiple.52
-s case=53  # CastCArrayToCPtr-multiple.53
-s case=54  # CastCArrayToCPtr-multiple.54
-s case=0   # CastCArrayToCPtr-multiple.ok.good
